# capstone-llm-news-detector

./: .gitignore  AI-scraper.ipynb  AI_data.csv  README.md  Text_Classification_Bert_Pretrained.ipynb  ai_dataset.csv  multimodal_1_0.ipynb  multimodal_1_1.ipynb  pyproject.toml  real_dataset.csv  resnet18_image_model.ipynb  rewrite_articles.py  rewritten_AI_data.csv
.ipynb_checkpoints/: README-checkpoint.md
data/ai_data/: AI_data.csv  rewritten_AI_data.csv
data/ai_scraping/: newsgpt_dataset.csv  newsgpt_scraper.ipynb  scraper.py
data/ai_scraping/.ipynb_checkpoints/: newsgpt_dataset-checkpoint.csv  newsgpt_scraper-checkpoint.ipynb
data/real_scraping/: bbc_news.csv  bbc_scraper.py  cnn_dataset.csv  cnn_scraping.ipynb  cnn_scraping.py  real_dataset.csv  scraper.py
data/real_scraping/.ipynb_checkpoints/: cnn_dataset-checkpoint.csv  cnn_scraping-checkpoint.ipynb
data/rewrite_ai/: rewrite_articles.py  rewritten_AI_data.csv
models/image/: image_model.py
models/multi-modal/: multi_modal.ipynb  xgboost_classifier.ipynb
models/multi-modal/.ipynb_checkpoints/: multi-modal_model-checkpoint.py  multi_modal-checkpoint.ipynb
rewrite_ai/: rewrite_articles.py
scraper/: AI_scraper.py
