[tool.poetry]
name = "capstone-llm-news-detector"
version = "0.1.0"
description = ""
authors = ["Adam Geenen <adamgeenen@gmail.com>"]
readme = "README.md"
packages = [{include = "capstone_llm_news_detector"}]

[tool.poetry.dependencies]
python = "^3.9"
langchain = "^0.1.8"
langchain-openai = "^0.0.6"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
